<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.app01prj.HomeActivity" >

    <item
        android:id="@+id/action_capitali"
        android:orderInCategory="100"
        android:title="@string/action_capitali"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_fiumi"
        android:orderInCategory="200"
        android:title="@string/action_fiumi"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_laghi"
        android:orderInCategory="300"
        android:title="@string/action_laghi"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_monumenti"
        android:orderInCategory="400"
        android:title="@string/action_monumenti"
        app:showAsAction="never"/>

</menu>
